--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>品言我想你了。゜゜(´Ｏ`) ゜゜。</title>
+    <title>品言我想你了<br>。゜゜(´Ｏ`) ゜゜。</title>
     <style>
         :root {
             --header-bg: linear-gradient(135deg, #3de2ee 0%, #38b9b9 100%); /* 顶部背景渐变 */
@@ -58,8 +58,8 @@
 
         /* 图片样式 */
         .scroll-image {
-            width: 300px;
-            height: 200px;
+            width: 120px;
+            height: 80px;
             margin: 0 15px;
             border-radius: 15px;
             overflow: hidden;
