--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>品言我想你了<br>。゜゜(´Ｏ`) ゜゜。</title>
+    <title>品言我想你了。゜゜(´Ｏ`) ゜゜。</title>
     <style>
         :root {
             --header-bg: linear-gradient(135deg, #3de2ee 0%, #38b9b9 100%); /* 顶部背景渐变 */
@@ -96,7 +96,7 @@
 </head>
 <body>
     <header>
-        <h1>品言我想你了。゜゜(´Ｏ`) ゜゜。</h1>
+        <h1>品言我想你了<br>。゜゜(´Ｏ`) ゜゜。</h1>
     </header>
 
     <!-- 第一行 -->
